--- a/website/newsletter/257/index.mdx
+++ b/website/newsletter/257/index.mdx
@@ -26,7 +26,7 @@ import Support from "../_support.mdx";
 
 **[Ship Faster with AI Code Review](https://blog.sentry.io/ai-code-review-30k-bugs-lighter-50-faster/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=aicodereview-fy26q4-aicodereviewlaunch&utm_content=newsletter-30k-blog-learnmore)**
 
-How many bugs has Sentry’s AI Code Review caught *before* they hit production? More than **30,000. 🤯**
+How many bugs has Sentry’s AI Code Review caught _before_ they hit production? More than **30,000. 🤯**
 
 Since launch, it has only gotten better, now working its magic **50% faster,** and providing agent prompts to automate fixes.
 
@@ -65,7 +65,7 @@ If you’re not looking for an invoice, start with [LyteNyte Grid Core today](ht
 
 <Todo />
 
-- 💸 [Using Expo Libraries on Horizon OS - A Guide to Compatibility](https://www.callstack.com/blog/using-expo-libraries-on-horizon-os-a-guide-to-compatibility?utm_campaign=meta&utm_source=TWIR&utm_medium=mail&utm_content=using-expo-libraries-on-horizon-os-a-guide-to-compatibility)
+- 💸 [Meta Horizon Start Developer Competition is on with $1.5M in prizes for the best apps! Need ideas? Here’s some inspo to get you started](https://www.callstack.com/blog/what-you-can-build-with-react-native-on-meta-quest?utm_campaign=meta&utm_source=TWIR&utm_medium=mail&utm_content=what-you-can-build-with-react-native-on-meta-quest)
 
 ---
 
