--- a/website/newsletter/257/index.mdx
+++ b/website/newsletter/257/index.mdx
@@ -65,7 +65,7 @@ If you’re not looking for an invoice, start with [LyteNyte Grid Core today](ht
 
 <Todo />
 
-- 💸 [Meta Horizon Start Developer Competition is on with $1.5M in prizes for the best apps! Need ideas? Here’s some inspo to get you started](https://www.callstack.com/blog/what-you-can-build-with-react-native-on-meta-quest?utm_campaign=meta&utm_source=TWIR&utm_medium=mail&utm_content=what-you-can-build-with-react-native-on-meta-quest)
+- 💸 [Most Expo libs “just work” on Meta Quest, but a few need tweaks. Here’s what’s compatible, what breaks, and how to fix it.](https://www.callstack.com/blog/using-expo-libraries-on-horizon-os-a-guide-to-compatibility?utm_campaign=meta&utm_source=TWIR&utm_medium=email&utm_content=using-expo-libraries-on-horizon-os-a-guide-to-compatibility)
 
 ---
 
